--- a/test.html
+++ b/test.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>改善</title>
+    <title>test</title>
     <style>
         #pwdLvSpan{display: inline-block;width: 100px;height:5px;background: #c3c3c3}
         #pwdLvSpan i{display: block;background: green;height: 5px;width: 0;}
